--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -21,7 +21,7 @@ jobs:
           - darwin
         goarch:
           - amd64
-          # - arm64
+          - arm64
           # - arm
         exclude:
           - goos: darwin
