--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -23,6 +23,9 @@ jobs:
             goarch: amd64
           - goos: darwin
             goarch: arm64
+        exclude:
+          - goos: windows
+            goarch: arm64
 
     steps:
       - uses: actions/checkout@v3
