--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -12,31 +12,24 @@ jobs:
     strategy:
       matrix:
         project: [videohashes, duration, phashcompare]
-        include:
-          - goos: linux
-            goarch: amd64
-          - goos: linux
-            goarch: arm64
+        goos: [linux, windows, darwin]
+        goarch: [amd64, arm64]
+        exclude:
           - goos: windows
-            goarch: amd64
-          - goos: darwin
-            goarch: amd64
-          - goos: darwin
             goarch: arm64
 
     steps:
       - uses: actions/checkout@v3
-
       - uses: wangyoucao577/go-release-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
-          goversion: 1.21.9
-          ldflags: -extldflags=-static -s -w
-          project_path: ./cmd/${{ matrix.project }}
-          asset_name: ${{ matrix.project }}-${{ matrix.goos }}-${{ matrix.goarch }}
-          compress_assets: OFF
+          goversion: "1.21.9"
+          ldflags: "-extldflags=-static -s -w"
+          project_path: "./cmd/${{ matrix.project }}"
+          asset_name: "${{ matrix.project }}-${{ matrix.goos }}-${{ matrix.goarch }}"
+          compress_assets: "OFF"
           overwrite: true
           md5sum: false
           sha256sum: false
